k8s/manifests/api-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  labels:
    app: api-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: api-service
